INT-10273: Revert "INT-10231: Fix Safari whitespace"
This reverts commit 3f1dc315694ae966114908c19d5fd845b512cc29.

--- a/less/bootswatch/snap-course.less
+++ b/less/bootswatch/snap-course.less
@@ -373,9 +373,10 @@ li.section:focus {
 .course-content > ul li.section,
 #coursetools,
 #snap-add-new-section {
-    height: auto;
-    width: auto;
-    display:none;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+    overflow: hidden;
 }
 
 
@@ -386,7 +387,9 @@ li.section:focus {
 .editing #coursetools,
 .format-singleactivity #coursetools,
 #page-course-view-folderview #coursetools {
-    display: block;
+    visibility: visible;
+    height: auto;
+    width: auto;
     outline: 0;
 }
 
